--- a/src/Nzo/UserBundle/Resources/translations/FOSUserBundle.en.yml
+++ b/src/Nzo/UserBundle/Resources/translations/FOSUserBundle.en.yml
@@ -58,7 +58,7 @@ registration:
             To finish activating your account - please visit %confirmationUrl%
 
             Regards,
-            Resa Travelstore.
+            Jared Project.
 
 # Password resetting
 resetting:
@@ -80,7 +80,7 @@ resetting:
             To reset your password - please visit  %confirmationUrl%
 
             Regards,
-            Resa Travelstore.
+            Jared Project.
 
 # Global strings
 layout:
